cmake_minimum_required(VERSION 3.20)
project(OOP_Vezbe_10_1)

set(CMAKE_CXX_STANDARD 17)

add_executable(OOP_Vezbe_10_1 main.cpp Polje.cpp Polje.h Greska.cpp Greska.h Figura.cpp Figura.h Top.cpp Top.h Lovac.cpp Lovac.h Skakac.cpp Skakac.h Sah.cpp Sah.h Dama.cpp Dama.h Pijun.cpp Pijun.h Kralj.cpp Kralj.h)
